# atagaruabot

./: .replit  Procfile  app.py  bot.py  main.py  now.json  pyproject.toml  requirements.txt  vercal.json  vercel.json  vercel_app.py
api/: discord-bot.py  index.py
static/audio/: elad.m4a  kakibuy.m4a  spyware.m4a
templates/: index.html
