[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Discord Bot for FIFA Players"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.3.2"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
PyNaCl = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
